--- a/anmeldung.html
+++ b/anmeldung.html
@@ -73,7 +73,7 @@
         <!-- New Anmeld & Insta Block -->
         <div class="card-dark">
             <div class="buttons-container">
-                <a href="https://forms.gle/ZGsVB57BYUiBEkVi9" class="button" target="_blank">Meld dich jetzt an</a>
+                <a href="https://forms.gle/EyQUfsG1FxKU8gh39" class="button" target="_blank">Meld dich jetzt an</a>
             </div>
         </div>
 
