--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <!-- New Anmeld & Insta Block -->
         <div class="card-dark">
             <div class="buttons-container">
-                <a href="https://forms.gle/ZGsVB57BYUiBEkVi9" class="button">Meld dich jetzt an</a>
+                <a href="https://forms.gle/EyQUfsG1FxKU8gh39" target="_blank" class="button">Meld dich jetzt an</a>
                 <a href="https://www.instagram.com/silvestertagung.pfahlhamburg/?hl=de" class="button"
                     target="_blank">Unser
                     Instagram</a>
@@ -97,7 +97,8 @@
         <div class="card-dark">
             <div class="quote">
                 <p class="program-header">ÜBERSICHT DES PROGRAMMS</p>
-                <a href="programm.html"><img class="week-program" src="images/Programm/week_de.png" alt="Entire program"></a>
+                <a href="programm.html"><img class="week-program" src="images/Programm/week_de.png"
+                        alt="Entire program"></a>
             </div>
         </div>
 
@@ -127,7 +128,8 @@
                     <p class="align-left temp-bold">Unterkunft</p>
                     <p class="align-right">Jugendherberge Hamburg - Horner Rennbahn<br>
                         Rennbahnstr. 100 · 22111 Hamburg <br>
-                        <a href="https://www.jugendherberge.de/jugendherbergen/hamburg-horner-rennbahn/#anreise">-Zur Jugendherberge-</a>
+                        <a href="https://www.jugendherberge.de/jugendherbergen/hamburg-horner-rennbahn/#anreise">-Zur
+                            Jugendherberge-</a>
                     </p>
                 </div>
                 <div class="split-line">
@@ -184,9 +186,7 @@
                     <img class="team-image-upper" src="images/team/samuel.jpg" alt="">
                     <p class="team-ward">Hamburg</p>
                 </div>
-            </div>
-
-            <div class="team-gallery teamgallerylower">
+            
                 <div class="team-member">
                     <p class="team-name">Klara</p>
                     <img class="team-image" src="images/team/Klara.jpg" alt="">
