--- a/registration.html
+++ b/registration.html
@@ -73,7 +73,7 @@
         <!-- New Anmeld & Insta Block -->
         <div class="card-dark">
             <div class="buttons-container">
-                <a href="https://forms.gle/ZGsVB57BYUiBEkVi9" class="button" target="_blank">Register Now</a>
+                <a href="https://forms.gle/EyQUfsG1FxKU8gh39" class="button" target="_blank">Register Now</a>
             </div>
         </div>
 
@@ -100,7 +100,7 @@
                         ask that everyone who can afford it pays the <b>150 € participation fee</b>.</p>
                     <p class="registration-text">We only accept payments via bank transfer. You'll find the account
                         details at the end of this section.</p>
-                    <p class="registration-text">If you can't make the payment by December 12th, or run into any issues
+                    <p class="registration-text">If you can't make the payment by November 27th, or run into any issues
                         with the transfer, just let us know.</p>
                     <p class="registration-text">If you have any questions, feel free to email us at <a
                             href="mailto:silvestertagung2024@gmail.com"
@@ -134,17 +134,17 @@
                 <p class="info-header">DEADLINES</p>
                 <div class="split-line-registration">
                     <p class="align-left temp-bold">Registration</p>
-                    <p class="align-right">December XX, 2024</p>
+                    <p class="align-right">November 27, 2024</p>
                 </div>
                 <p class="registration-text bottom-border"><a href="mailto:silvestertagung2024@gmail.com"
                         target="_blank">E-mail</a> registrations only after that</p>
                 <div class="split-line">
                     <p class="align-left temp-bold">Payment</p>
-                    <p class="align-right">December XX, 2024</p>
+                    <p class="align-right">November 27, 2024</p>
                 </div>
                 <div class="split-line-registration">
                     <p class="align-left temp-bold">Cancellation</p>
-                    <p class="align-right">December XX, 2024</p>
+                    <p class="align-right">November 27, 2024</p>
                 </div>
                 <p class="registration-text bottom-border">If you aren't able to attend, then please cancel via <a
                         href="mailto:silvestertagung2024@gmail.com" target="_blank">e-mail</a></p>
