--- a/travel.html
+++ b/travel.html
@@ -89,7 +89,8 @@
                 <div class="split-line">
                     <p class="align-left temp-bold">Accommodation</p>
                     <p class="align-right">Jugendherberge Hamburg - Horner Rennbahn<br>
-                        Rennbahnstr. 100 · 22111 Hamburg</p>
+                        Rennbahnstr. 100 · 22111 Hamburg <br>
+                        <a href="https://www.jugendherberge.de/jugendherbergen/hamburg-horner-rennbahn/#anreise">-To the Hostel-</a></p>
                 </div>
                 <div class="split-line">
                     <p class="align-left info-note">As with last year, participants are free to arrange their own
