--- a/home.html
+++ b/home.html
@@ -73,7 +73,7 @@
         <!-- New Anmeld & Insta Block -->
         <div class="card-dark">
             <div class="buttons-container">
-                <a href="https://forms.gle/ZGsVB57BYUiBEkVi9" class="button">Register Here</a>
+                <a href="https://forms.gle/EyQUfsG1FxKU8gh39" class="button" target="_blank">Register Here</a>
                 <a href="https://www.instagram.com/silvestertagung.pfahlhamburg/?hl=de" class="button"
                     target="_blank">Instagram Page</a>
             </div>
@@ -179,9 +179,7 @@
                     <img class="team-image-upper" src="images/team/samuel.jpg" alt="">
                     <p class="team-ward">Hamburg</p>
                 </div>
-            </div>
-
-            <div class="team-gallery teamgallerylower">
+            
                 <div class="team-member">
                     <p class="team-name">Klara</p>
                     <img class="team-image" src="images/team/Klara.jpg" alt="">
